# ai-advanced-agent-workshop

./: .gitignore
Setup/: README.md
Setup/database/: .env.example  README.md  pyproject.toml
Setup/database/migrations/: 001_rag.sql  002_northwind_schema.sql
Setup/database/pipelines/: ingest.py  ingest_reports.py  seed_northwind.py
Setup/openrouter/: README.md
part_1/: README.md  pyproject.toml
part_10/: README.md  pyproject.toml
part_10/agent/nodes/: intent.py
part_2/: pyproject.toml
part_3/: README.md  pyproject.toml
part_5/: pyproject.toml
part_7/: pyproject.toml
part_8/: README.md  pyproject.toml
